<resources>
    <string name="app_name">ODESolver</string>

    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>
    <string name="numSolveString">Numerical solving of ODE</string>
    <string name="symSolveString">Symbolical solving of ODE</string>
    <string name="action_settings">Settings</string>
    <string name="shareString">Share</string>
    <string name="Solver">Solver</string>
    <string name="explEuler">expl. Euler</string>
    <string name="implEuler">impl. Euler</string>
    <string name="rungeKutta">Runge/Kutta</string>


    <!-- String for numerical Solving-->
    <string name="stepSizeString">Stepsize</string>
    <string name="leftBoundString">Left bound</string>
    <string name="rightBoundString">Right bound</string>
    <string name="numberOfStepsString">#Steps</string>
    <string name="functionString">Function</string>
    <string name="initialValueString">initial value</string>
    <string name="title_activity_num_solve">numSolve</string>
    <string name="title_activity_sym_solve">symSolve</string>
    <string name="title_activity_inputs_num_solve">inputs_num_solve</string>
    <string name="title_activity_num_solve_after_edit">numSolveAfterEdit</string>
</resources>
