<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/activity_inputs_num_solve"
    tools:context="com.mathupyourlife.odesolver.inputs_num_solve">

        <EditText android:id="@+id/ODE"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/ODEString"
            android:layout_marginBottom="36dp" />

        <EditText android:id="@+id/StepSize"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/stepSizeString"
            android:layout_below="@+id/ODE"
            android:inputType="numberDecimal"
            />

        <EditText android:id="@+id/initalValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/initialValueString"
            android:inputType="numberSigned|numberDecimal"
            android:layout_alignTop="@+id/rightBound"
            android:layout_alignParentEnd="true" />

        <EditText android:id="@+id/leftBound"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/leftBoundString"
            android:inputType="numberSigned|numberDecimal"
            android:layout_above="@+id/StepSize"
            android:layout_alignParentStart="true" />

        <EditText android:id="@+id/rightBound"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/rightBoundString"
            android:inputType="numberSigned|numberDecimal"
            android:layout_alignTop="@+id/leftBound"
            android:layout_centerHorizontal="true" />

        <EditText android:id="@+id/No_Steps"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/numberOfStepsString"
            android:inputType="number"
            android:layout_below="@+id/initalValue"
            android:layout_alignEnd="@+id/initalValue" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Solver"
        android:id="@+id/solverButton"
        android:onClick="onSolverButtonClick"
        android:layout_below="@+id/No_Steps"
        android:layout_alignParentStart="true" />


</RelativeLayout>
